--- a/package.json
+++ b/package.json
@@ -34,14 +34,14 @@
   "homepage": "https://github.com/block-wallet/banned-assets#readme",
   "dependencies": {
     "ethereumjs-util": "^7.1.4",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "ts-node": "^10.7.0"
   },
   "devDependencies": {
     "@types/jest": "^27.5.0",
     "jest": "^28.1.0",
     "prettier": "^2.6.2",
     "ts-jest": "^28.0.2",
-    "ts-node": "^10.7.0",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0"
   }
