--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
   },
   "homepage": "https://github.com/block-wallet/banned-assets#readme",
   "dependencies": {
+    "@types/node": "^17.0.31",
     "ethereumjs-util": "^7.1.4",
-    "typescript": "^4.6.4",
-    "ts-node": "^10.7.0"
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4"
   },
   "devDependencies": {
     "@types/jest": "^27.5.0",
