--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -18,7 +18,7 @@ updates:
     schedule:
       interval: daily
     commit-message:
-      prefix: "chore: banned-assets"
+      prefix: "chore: assets"
       include: "scope"
     labels:
       - "dependencies"
